src/test/resources/30/single/opf/invalid/rendition-globals-badvalues.opf
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../../../../main/resources/com/adobe/epubcheck/schema/30/package-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../../../../main/resources/com/adobe/epubcheck/schema/30/package-30.sch"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid" xmlns:dc="http://purl.org/dc/elements/1.1/">
    <metadata>
        <dc:identifier id="uid">urn:uuid:550e8412-e29b-41d4-a716-446655441234</dc:identifier>
        <dc:title>Norwegian Wood</dc:title>        
        <dc:language>en</dc:language>
        <meta property="dcterms:modified">2011-08-19T12:00:00Z</meta>
        <meta property="rendition:flow">foo</meta>
        <meta property="rendition:layout">foo</meta>
        <meta property="rendition:orientation">foo</meta>
        <meta property="rendition:spread">foo</meta>
        <meta property="rendition:viewport">height=1,width=100px</meta>
    </metadata> 
    <manifest>
        <item id="t001" href="contents.xhtml" properties="nav" media-type="application/xhtml+xml" />        
    </manifest>
    <spine>
        <itemref idref="t001" />
    </spine>
</package>